--- a/AKchatApp/src/app/chat/group-create/group-create.component.css
+++ b/AKchatApp/src/app/chat/group-create/group-create.component.css
@@ -11,7 +11,19 @@
     margin-right: 20px;
     margin-left: 10px
 }
-
+.image-input{
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  opacity: 0;
+  position: absolute;
+  z-index: 23;
+}
+.user-image{
+  height: 160px;
+  width: 160px;
+  border-radius: 50%;
+}
 /* .userlist{
     background-color: blue;
     opacity: 0.5;
