--- a/AKchatApp/src/app/chat/group-create/group-create.component.html
+++ b/AKchatApp/src/app/chat/group-create/group-create.component.html
@@ -3,10 +3,23 @@
     <button type="button" class="btn-close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
 <div class="modal-body">
+  
     <div class="card border-secondary">
+     
+        <div class="my-3 user-image d-flex justify-content-center" style="text-align: center;margin-inline: auto;position: relative;">
+            <input class="image-input" type="file" #Image accept="image/*"
+                (change)="handleFileInput($event)">
+            
+                <img class="user-image" [src]="imageUrl ? imageUrl: '/assets/img/profile.png'" alt="" style="border:1px solid black">
+           
+            <div class="edit-pencil" style="position: absolute;background-color: green;bottom: 3%;left:69%"><i class="bi bi-pencil-square"
+                    style="font-size: x-large;color: white;"></i></div>
+        </div>
+   
         <div class="d-flex justify-content-center mainBody">
             <div class="col-12 col-lg-5 form-width">
                 <main class="form-signin"> 
+                 
                     <form id="groupForm" [formGroup]="groupForm" autocomplete="off" class="p-3 border">
                         <h4>Enter Group Name</h4>
                         <div class="form-floating mb-3">
