--- a/AKchatApp/src/app/header/header.component.css
+++ b/AKchatApp/src/app/header/header.component.css
@@ -49,6 +49,7 @@ hr {
     margin-top: auto;
     margin-bottom: auto;
 }
+
 .user-image1 {
     height: 29px;
     width: 28px;
@@ -70,6 +71,7 @@ hr {
     } */
 
 /* For Hamburgur toggle */
+
 #sidebarMenu {
     height: 171px;
     /*change here related your menu height*/
@@ -192,12 +194,168 @@ input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-1 {
     margin-top: 8px;
 }
 
+/* search */
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+  }
+  
+  /* The search field */
+  /* #myInput {
+    box-sizing: border-box;
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+    position: absolute;
+  right: 210px;
+  bottom: 8px;
+  height: 34px;
+  width: 170px;border-radius: 12px;
+  }
+   */
+  /* The search field when it gets focus/clicked on */
+  #myInput:focus {outline: 3px solid #ddd;}
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    border: 1px solid #ddd;
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+
+
+
+
+
+
+  /* search */
+
+  .input-container {
+    display: flex;
+    align-items: center;
+    padding: 5px; /* Adjust this value to control the vertical position */
+  }
+  
+  /* Adjust the vertical position of the input field */
+  .input-container input {
+    margin-top: 5px; /* Adjust this value to control the vertical position */
+  }
+
+
+/* new */
+
+.dropdown-content {
+    position: absolute;
+    top: 0;
+    right: 0; /* Initially position it outside the visible area */
+    width: 0; /* Initially, set the width to 0 */
+    height: 100%;
+    background-color: #f1f1f1;
+    overflow: hidden;
+    transition: width 0.5s; /* Add a transition for the width property */
+  }
+  
+  .show {
+    /* width: 210px;  */
+  }
+  
+  /* .search-input {
+    position: absolute;
+    bottom: 1px;
+    height: 20px;
+    transition: right 1s; 
+  }
+  
+  .show .search-input {
+    right: 0; 
+  }
+   */
+
+
+   .user-text{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    margin-top: auto;
+    margin-bottom: auto;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    font-weight: 600;
+    font-size: large;
+   }
 input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
     transition: all 0.3s;
     box-sizing: border-box;
     transform: rotate(-135deg);
     margin-top: -9px;
 }
+/* .searchinput{
+    position: absolute;
+      right: 205px;
+      bottom: 8px;
+      height: 34px;
+      width: 170px;
+      border-radius: 12px;
+     
+      font-size: 16px;
+      border: none;
+      border-bottom: 1px solid #ddd;
+}
+.searchinput:focus {outline: 3px solid #ddd;} */
+
+@media screen and (max-width:1071px){
+    .searchinput{
+        position: absolute;
+        right: 0px;
+        bottom: 8px;
+        left: 13px;
+        height: 34px;
+        width: 170px;
+        border-radius: 12px;
+        padding: 0px;
+    }
+}
+
 @media screen and (max-width: 950px) {
     .sidebarIconToggle {
         display: block;
@@ -279,129 +437,3 @@ input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
 
 
 
-
-/* search */
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-  }
-  
-  /* The search field */
-  #myInput {
-    box-sizing: border-box;
-    /* background-image: url('searchicon.png'); */
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  /* The search field when it gets focus/clicked on */
-  #myInput:focus {outline: 3px solid #ddd;}
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    border: 1px solid #ddd;
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
-
-
-
-
-
-
-  /* search */
-
-  .input-container {
-    display: flex;
-    align-items: center;
-    padding: 5px; /* Adjust this value to control the vertical position */
-  }
-  
-  /* Adjust the vertical position of the input field */
-  .input-container input {
-    margin-top: 5px; /* Adjust this value to control the vertical position */
-  }
-
-
-/* new */
-
-.dropdown-content {
-    position: absolute;
-    top: 0;
-    right: 0; /* Initially position it outside the visible area */
-    width: 0; /* Initially, set the width to 0 */
-    height: 100%;
-    background-color: #f1f1f1;
-    overflow: hidden;
-    transition: width 0.5s; /* Add a transition for the width property */
-  }
-  
-  .show {
-    width: 210px; /* Adjust the width according to your design */
-  }
-  
-  /* .search-input {
-    position: absolute;
-    bottom: 1px;
-    height: 20px;
-    transition: right 1s; 
-  }
-  
-  .show .search-input {
-    right: 0; 
-  }
-   */
-
-
-   .user-text{
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    margin-top: auto;
-    margin-bottom: auto;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: red;
-    font-weight: 600;
-    font-size: large;
-   }
