--- a/AKchatApp/src/app/my-posts/my-posts.component.html
+++ b/AKchatApp/src/app/my-posts/my-posts.component.html
@@ -7,7 +7,7 @@
 
             <ng-container *ngIf="galleryData.length > 0">
 
-                <div class="mb-3" *ngFor="let data of galleryData" [ngClass]="grid ? 'col-4' : 'col-12'">
+                <div class="mb-3" *ngFor="let data of galleryData" [ngClass]="grid ? 'col-12 col-sm-6 col-md-4 col-lg-4' : 'col-12'">
                     <div *ngIf="data.uploadedUser.trim() === service.myName.trim()"
                         style=" border: solid black 1px;box-shadow: 3px 4px 12px grey;border-radius: 12px;flex: 0 0 calc(33.3333% - 20px); background-color: white">
                         <div class="mt-2 d-flex justify-content-center" style="position: relative;">
