--- a/AKchatApp/src/app/photo-gallery/photo-gallery.component.html
+++ b/AKchatApp/src/app/photo-gallery/photo-gallery.component.html
@@ -10,22 +10,18 @@
                 <a class="btn ubtn " [routerLink]="['/my-posts']"><i class="bi bi-file-post d-none posticon"
                         style="font-size: large;"></i><span class="headtitle">My Posts</span></a>
             </div>
-            <div class="container d-flex justify-content-center p-2 posts" *ngFor="let data of getGalleryData()">
+            <div class="container d-flex justify-content-center posts" *ngFor="let data of getGalleryData()">
 
                 <div class="card mt-3 " style="width: fit-content;height: fit-content;">
                     <div class="m-3 justify-content-between d-flex">
-                        <div class="d-flex align-items-center">
-
+                        <div class="d-flex align-items-center" style="flex-wrap: wrap;">
                             <ng-container *ngIf="data.userimage;else noofflineuser">
                                 <img class="user-image me-2" [src]="data.userimage" alt="">
                             </ng-container>
 
                             <ng-template #noofflineuser>
-
                                 <div class="user-text me-2">{{data.uploadedUser.charAt(0)}}</div>
                             </ng-template>
-
-
                             <span class="navbar-brand me-1">{{ data.uploadedUser }}</span>
                             <span *ngIf="data.tagnames" class="navbar-brand">has tagged
                                 <ng-container
