--- a/AKchatApp/src/app/story-upload/story-upload.component.html
+++ b/AKchatApp/src/app/story-upload/story-upload.component.html
@@ -80,8 +80,8 @@
 
 
 
-    <div>
-        <div class="d-none row d-flex justify-content-center mt-5">
+    <!-- <div> -->
+    <!-- <div class="d-none row d-flex justify-content-center mt-5">
             <div class="col-10 mt-3 " style="background-color: #ededed;height: 500px;">
                 <div class="container d-flex justify-content-center mt-2">
                 </div>
@@ -97,9 +97,9 @@
 
 
                             </div>
-                        </div>
+                        </div> -->
 
-                        <div class="d-flex justify-content-center">
+    <!-- <div class="d-flex justify-content-center">
                             <mat-card-content class="d-flex flex-column half-size">
                                 <label>Caption</label>
                                 <mat-form-field appearance="outline">
@@ -119,11 +119,11 @@
                         <mat-card-footer></mat-card-footer>
                     </mat-card>
                 </form>
-            </div>
-            <!-- <div>
+            </div> -->
+    <!-- <div>
             <img *ngFor="let preview of previews" [src]="preview" class="rounded mb-3 ms-2" width="100" height="80px">
         </div> -->
-            <div class="slider">
+    <!-- <div class="slider">
                 <div>
                     <div (click)="goToPrevious()" id="restartButton" class="leftArrow" style="color: black;">
                         <span>❰</span>
@@ -131,26 +131,26 @@
                     <div (click)="goToNext()" class="rightArrow" style="color: black;">
                         <span>❱</span>
                     </div>
-                </div>
-                <!-- <div style="width: 160px; height: 160px;"
+                </div> -->
+    <!-- <div style="width: 160px; height: 160px;"
               class="slide"
               [ngStyle]="{ 'background-image': getCurrentSlideUrl() }"
             ></div> -->
-                <div style="width: 100%;height: 400px;" class="slide">
+    <!-- <div style="width: 100%;height: 400px;" class="slide">
                     <img [src]="getCurrentSlideUrl()" alt="Slide Image" style="width: 100%;height: 400px;">
-                </div>
-                <!-- <div *ngFor="let preview of previews; let i = index">
+                </div> -->
+    <!-- <div *ngFor="let preview of previews; let i = index">
               <div class="image-preview">
                 <img [src]="preview" class="rounded mb-3 ms-2" width="100" height="80px">
                 <span class="remove-icon" (click)="removeImage(i)">X</span>
               </div>
             </div>
           </div> -->
-                <div>
+    <!-- <div>
                     <img style="width:100px ;height:80px" *ngFor="let url of urls" [src]="url" class="rounded mb-3 ms-2"
                         width="180">
                 </div>
-            </div>
+            </div> -->
 
 
-        </div>
+</div>
