--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -2,12 +2,12 @@
 
   <!-- <input #myInput class="ps-2 searchinput" *ngIf="shouldShowDiv && service.isLogInComponent" type="text"  placeholder="Search 
   .."  [formControl]="userctrl" (input)="onUserSearch()" > -->
-  <input #myInput class="ps-2" *ngIf="shouldShowDiv" type="text" placeholder="Search.." id="myInput"
+  <!-- <input #myInput class="ps-2" *ngIf="shouldShowDiv" type="text" placeholder="Search.." id="myInput"
     [formControl]="userctrl" (input)="onUserSearch()" style="position: absolute;
   right: 210px;
   bottom: 0px;
   height: 34px;
-  width: 170px;border-radius: 12px;padding: 0px;">
+  width: 170px;border-radius: 12px;padding: 0px;"> -->
   
   <div class="row container-fluid" *ngIf="!service.isLogInComponent">
     <div class="col-7 d-flex" style="justify-content: space-between;">
